# mobile_robotics_engineer

module_1_assignment/: 01  02  CMakeLists.txt  Readme.md  package.xml
module_1_assignment/launch/: robot_display.launch.py
module_1_assignment/rviz/: robot_display.rviz
module_1_assignment/urdf/: broken_wheeled_robot.urdf  enhanced_robot_arm.urdf  fixed_wheeled_robot.urdf  mobile_manipulator.urdf  robot_arm.urdf
