<?xml version="1.0"?>
<package format="3">
  <name>module_1_assignment</name>
  <version>1.0.0</version>
  <description>
    Mobile Robotics Engineer - Module 1 Assignment
    URDF and Robot Creation in ROS 2
  </description>

  <!-- Maintainer information -->
  <maintainer email="sharifaiub15@gmail.com">Shariful Islam</maintainer>
  
  <!-- License information -->
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies - these packages need to be available when running -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>